--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gwi-ui",
-  "version": "1.0.0",
+  "name": "@earthsirapob/gwi-test",
+  "version": "1.0.1",
   "main": "index.js",
   "author": "earthsirapob <sirapob.jarutanyaluk@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "rollup -c --bundleConfigAsCjs"
+    "build": "rollup -c"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -15,13 +15,19 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "rollup": "^4.18.0",
     "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "tslib": "^2.6.3",
     "typescript": "^5.5.2"
   }
