--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "@earthsirapob/gwi-test",
-  "version": "1.0.1",
-  "main": "index.js",
+  "version": "1.0.2",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/index.d.ts",
   "author": "earthsirapob <sirapob.jarutanyaluk@gmail.com>",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "dev": "rollup -c -w",
     "build": "rollup -c"
   },
   "dependencies": {
